test: fixed logic and dependencies